; ModuleID = '/home/carl/AnghaBench/linux/drivers/clk/rockchip/extr_clk-pll.c_rockchip_rk3036_pll_enable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clk/rockchip/extr_clk-pll.c_rockchip_rk3036_pll_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk_hw = type { i32 }
%struct.rockchip_clk_pll = type { i64 }

@RK3036_PLLCON1_PWRDOWN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.clk_hw*)* @rockchip_rk3036_pll_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rockchip_rk3036_pll_enable(%struct.clk_hw* %0) #0 {
  %2 = alloca %struct.clk_hw*, align 8
  %3 = alloca %struct.rockchip_clk_pll*, align 8
  store %struct.clk_hw* %0, %struct.clk_hw** %2, align 8
  %4 = load %struct.clk_hw*, %struct.clk_hw** %2, align 8
  %5 = call %struct.rockchip_clk_pll* @to_rockchip_clk_pll(%struct.clk_hw* %4)
  store %struct.rockchip_clk_pll* %5, %struct.rockchip_clk_pll** %3, align 8
  %6 = load i32, i32* @RK3036_PLLCON1_PWRDOWN, align 4
  %7 = call i32 @HIWORD_UPDATE(i32 0, i32 %6, i32 0)
  %8 = load %struct.rockchip_clk_pll*, %struct.rockchip_clk_pll** %3, align 8
  %9 = getelementptr inbounds %struct.rockchip_clk_pll, %struct.rockchip_clk_pll* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = call i64 @RK3036_PLLCON(i32 1)
  %12 = add nsw i64 %10, %11
  %13 = call i32 @writel(i32 %7, i64 %12)
  %14 = load %struct.rockchip_clk_pll*, %struct.rockchip_clk_pll** %3, align 8
  %15 = call i32 @rockchip_pll_wait_lock(%struct.rockchip_clk_pll* %14)
  ret i32 0
}

declare dso_local %struct.rockchip_clk_pll* @to_rockchip_clk_pll(%struct.clk_hw*) #1

declare dso_local i32 @writel(i32, i64) #1

declare dso_local i32 @HIWORD_UPDATE(i32, i32, i32) #1

declare dso_local i64 @RK3036_PLLCON(i32) #1

declare dso_local i32 @rockchip_pll_wait_lock(%struct.rockchip_clk_pll*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
